--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div class="destination" id="venice">
                 <h2>Venice</h2>
             </div>
+
+            <div class="destination" id="lagos">
+                <h2>Lagos</h2>
+            </div>
         </div>
     </div>
 
